src/styles/_globals.css
:root {
  --max-width: 70rem; /* 1200px */

  --font-poppins: 'Poppins', Verdana, Geneva, Tahoma, sans-serif;

  /* Primary - Purple */
  --primary-100-rgb: 127, 99, 161; /* #7f63a1  */
  --primary-50-rgb: 204, 193, 218; /* #CCC1DA  */
  --primary-10-rgb: 247, 245, 249; /* #F7F5F9  */

  /* Secondary - Sky Blue */
  --secondary-rgb: 0, 150, 200; /* #0096c8 */

  --bg-rgb: 248, 249, 250; /* #F8F9FA */

  --black-rgb: 0, 0, 0; /* #000 */
  --white-rgb: 255, 255, 255; /* #000 */
  --gray-100-rgb: 108, 115, 122; /* #939ca3 */
  --gray-50-rgb: 147, 156, 163; /* #6d747a */

  /* Error Red - #c0504d */

  /* Spacing */
  --spacing-2: 0.125rem; /* 2px */
  --spacing-4: 0.25rem; /* 4px */
  --spacing-8: 0.5rem; /* 8px */
  --spacing-12: 0.75rem; /* 12px */
  --spacing-16: 1rem; /* 16px */
  --spacing-24: 1.5rem; /* 24px */
  --spacing-32: 2rem; /* 32px */
  --spacing-40: 2.5rem; /* 40px */

  /* Z-Indexes */
  --navbar-z-index: 10;

  /* Heights */
  --navbar-height-desktop: 5rem;
}
@media screen and (max-width: 1100px) {
  :root {
    --navbar-height-desktop: 3rem;
  }
}
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font: inherit;
}
strong,
em,
i {
  font: revert;
}
/* *:focus {
  outline: 3px solid red !important;
} */

html,
body {
  max-width: 100vw;
  /* overflow-x: hidden; */
  font-family: var(--font-poppins);
  /* background: rgba(var(--bg-rgb)); */
}
a {
  all: unset;
  cursor: pointer;
}
button:disabled {
  cursor: not-allowed;
}

/* .main-site-wrapper {
  margin-top: var(--navbar-height-desktop);
} */

.site-container {
  max-width: var(--max-width);
  margin: auto;
}

.content-box-wrapper {
  position: relative;
  background: #ffffff;
  border: 1px solid #ebedf0;
  border-radius: 8px;
  width: 100%;
}

input:-webkit-autofill,
textarea:-webkit-autofill,
select:-webkit-autofill {
  -webkit-box-shadow: inset 0 0 0px 1000px rgba(var(--primary-10-rgb), 0.8) !important;
  -webkit-text-fill-color: #333 !important;
}

.ck.ck-editor {
  display: flex;
  flex-direction: column-reverse;
  border-radius: 8px !important;
  height: 100% !important;
}

.ck-editor__main {
  flex-grow: 1;
}

.ck.ck-content {
  height: 100%;
  border: none !important;
  box-shadow: none !important;
  border: 1px solid #ebedf0 !important;
  border-radius: 8px 8px 0 0 !important;

  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;

  color: #656565;
  min-height: 22rem;
  padding: var(--spacing-16);
}

.ck.ck-toolbar {
  border: none !important;
  border: 1px solid #ebedf0 !important;
  border-radius: 0 0 8px 8px !important;
}

.modal-footer-btn {
  --color: rgb(var(--white-rgb));
  --bg-color: rgb(var(--primary-100-rgb));

  width: 100%;
  max-width: 6.25rem;
  height: var(--spacing-40);

  border: none;
  border-radius: 8px;
  background-color: var(--bg-color);
  color: var(--color);
  border: 1px solid rgb(var(--primary-100-rgb));

  font-weight: 600;
  font-size: 14px;
  line-height: 16px;
  cursor: pointer;
}
.modal-footer-btn.submit {
  margin-left: auto;
}
.modal-footer-btn.submit:disabled {
  opacity: 0.7;
}
.modal-footer-btn.cancel {
  margin-right: auto;
  --bg-color: rgb(var(--white-rgb));
  --color: rgb(var(--primary-100-rgb));
}
.modal-footer-btn:not(:disabled):hover {
  opacity: 0.9;
}

/* Default Images */
.default-user-icon {
  background-image: url(../assets/svg/default-images/default-user-icon.svg);
  background-size: cover;
  min-width: var(--spacing-24);
  min-height: var(--spacing-24);
}

.default-user-cover {
  background-image: url(../assets/svg/default-images/default-user-cover.svg);
  background-size: cover;
}

.default-people-listing-icon {
  background-image: url(../assets/svg/default-images/default-people-listing-icon.svg);
  background-size: cover;
}
.default-people-listing-cover {
  background-image: url(../assets/svg/default-images/default-people-listing-cover.svg);
  background-size: cover;
}

.default-program-listing-icon {
  background-image: url(../assets/svg/default-images/default-program-listing-icon.svg);
  background-size: cover;
}
.default-program-listing-cover {
  background-image: url(../assets/svg/default-images/default-program-listing-cover.svg);
  background-size: cover;
}

.default-place-listing-icon {
  background-image: url(../assets/svg/default-images/default-place-listing-icon.svg);
  background-size: cover;
}
.default-place-listing-cover {
  background-image: url(../assets/svg/default-images/default-place-listing-cover.svg);
  background-size: cover;
}
.default-product-listing-icon {
  background-image: url(../assets/svg/default-images/default-product-listing-icon.svg);
  background-size: cover;
}
.default-product-listing-cover {
  background-image: url(../assets/svg/default-images/default-product-listing-cover.svg);
  background-size: cover;
}
.ql-toolbar.ql-snow + .ql-container.ql-snow {
  border-top: 1px solid #EBEDF0 !important;
  border-bottom: 0;
  border-radius: 8px 8px 0 0;
  border-color: 1px solid #EBEDF0 !important;
}

.ql-toolbar.ql-snow {
  display: flex;
  align-items: center;
  border-radius: 0 0 8px 8px;
  border-color: 1px solid #EBEDF0 !important;
  height: 48px;
}
.ql-toolbar.ql-snow .ql-formats button {
  opacity: 0.8;
  padding: 0 12px !important;
  width: auto !important;
}

.ql-toolbar.ql-snow .ql-formats:nth-child(1) {
  margin-right: 6px;
}
.ql-toolbar.ql-snow > img {
  padding-top: 0px;
  display: inline-block;
  padding: 0 4px;
}
.ql-toolbar.ql-snow img:nth-child(3) {
  margin-left: auto;
}

.ql-editor.ql-blank {
  min-height: 17rem;
}
.quill > .ql-container > .ql-editor.ql-blank::before {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.04em;
  color: #939ca3;
  flex: 1;
}
.textarea-emoji-control {
  display: none;
}
.ql-container {
  font-size: 14px !important;
  max-width: 671px;
  width: 100%;
}

.ck.ck-content.ck-editor__editable ul,
.ck.ck-content.ck-editor__editable ol {
  padding-left: 12px !important;
}

.about-quill-container .ql-container.ql-snow {
  flex: 1;
  min-height: 285px !important;
  border: 1px solid #ebedf0;
}
.about-quill-container .ql-toolbar.ql-snow + .ql-container.ql-snow {
  border-top: 1px solid #ebedf0 !important;
  border-bottom: 0;
}
.about-quill-container .ql-toolbar.ql-snow {
  border: 1px solid #ebedf0;
}
.about-quill-container .ql-toolbar.ql-snow button {
  margin-right: 0.75rem;
}
.about-quill-container .quill {
  padding-bottom: 0;
  border-radius: 8px;
}
.about-quill-container {
  border-radius: 8px;
  overflow: hidden;
}

.about-quill-container.quill-error {
  border: 1px solid #c0504d;
}
.ql-snow.ql-toolbar button svg{
  width: 24px;
  height: 24px;
}
.ql-snow.ql-toolbar button svg path,
.ql-snow.ql-toolbar button svg line,
.ql-snow.ql-toolbar button svg circle,
.ql-snow.ql-toolbar button svg path rect{
  stroke: #6D747A;
}


@media screen and (max-width: 1300px) {
  .main-site-wrapper {
    margin-left: 24px;
    margin-right: 24px;
    margin-top: 8px;
  }
}

.custom-scrollbar {
  transition: 0.6s;
}
.custom-scrollbar::-webkit-scrollbar {
  width: 2px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background-color: transparent;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.2);
  border-radius: 5px;
}

.custom-scrollbar:hover::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.5);
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0);
  transition: background-color 0.3s ease;
}

.custom-scrollbar:hover::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.4);
}

